# Chesster

./: CMakeLists.txt  run_tests.py
include/: attack_masks.h  board.h  book.h  magic.h  perft.h  random.h  search.h  uci.h  utils.h  zobrist.h
magic_bitboards/: bishop_masks.txt  bitboard_visualizer.py  bits.txt  generate_attackers.py  rook_masks.txt
src/: attack_masks.cpp  board.cpp  evaluate.cpp  magic.cpp  main.cpp  movegen.cpp  perft.cpp  search.cpp
